[package]
name = "angrapa"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
bollard = "0.14.0"
chrono = "0.4.26"
color-eyre = "0.6.2"
colored = "2.0.4"
flume = "0.10.14"
futures = "0.3.28"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.1"
shiplift = "0.7.0"
tar = "0.4.39"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"

[[bin]]
name = "runner"
path = "src/runner/runner.rs"

[[bin]]
name = "manager"
path = "src/manager/manager.rs"
