[package]
name = "angrapa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
async-trait = "0.1.71"
axum = { version = "0.6.19", features = ["macros"] }
bollard = "0.14.0"
chrono = "0.4.26"
color-eyre = "0.6.2"
colored = "2.0.4"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
flume = "0.10.14"
futures = "0.3.28"
hex = "0.4.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive", "serde_derive", "alloc"] }
serde_json = "1.0.103"
shiplift = "0.7.0"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
tar = "0.4.39"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2.4"
warp = "0.3.5"
webhook = "2.1.2"

[lib]
path = "src/lib/lib.rs"
