[package]
name = "angrepa"
version = "0.1.0"
edition = "2021"
default-run = "angrepa_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
async-trait = "0.1.71"
axum = { version = "0.6.19", features = ["macros", "query"] }
axum_typed_multipart = "0.5.1"
bollard = "0.14.0"
bus = "2.4.1"
chrono = { version = "0.4.26", features = ["serde"] }
color-eyre = "0.6.2"
colored = "2.0.4"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
flume = "0.10.14"
futures = "0.3.28"
hex = "0.4.3"
lexical-sort = "0.3.1"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = { version = "1.0.171", features = ["derive", "serde_derive", "alloc"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "time", "chrono"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
tabled = { version = "0.13.0", features = ["color"] }
tar = "0.4.39"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.6"
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2.4"
tungstenite = "0.20.0"
warp = "0.3.5"
webhook = "2.1.2"

[lib]
path = "src/angrepa/lib/lib.rs"

[[bin]]
name = "angrepa_server"
path = "src/angrepa/main.rs"

[[bin]]
name = "angrepa"
path = "src/cli/cli.rs"
